--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -118,3 +118,36 @@ input:focus {
 body{
   background: #d2d6de;
 }
+
+.el-tabs__header{
+  position: fixed;
+  top: 50px;
+  left: 230px;
+  right: 0;
+  z-index: 930;
+  padding: 0 55px 0 15px;
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12), 0 0 6px 0 rgba(0, 0, 0, 0.04);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.12), 0 0 6px 0 rgba(0, 0, 0, 0.04);
+  background-color: #fff;
+}
+.el-card__body{
+  padding:0;
+}
+.mod-role{
+  padding:20px;
+}
+.site-tabs__tools {
+  position: fixed;
+  top: 50px;
+  right: 0;
+  z-index: 931;
+  height: 40px;
+  padding: 0 12px;
+  font-size: 16px;
+  line-height: 40px;
+  background-color: #f1f4f5;
+  cursor: pointer;
+}
+.el-tabs__content{
+  margin: 55px 15px 15px;
+}
