--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -152,3 +152,15 @@ body{
   background-color: #f1f4f5;
   cursor: pointer;
 }
+.el-checkbox{
+  margin-right:30px;
+}
+.el-checkbox+.el-checkbox{
+  margin-left:0;
+}
+.el-range-editor.el-input__inner{
+  height:23px;
+}
+.el-date-editor .el-range__icon,.el-date-editor .el-range-separator,.el-date-editor .el-range__close-icon{
+  line-height:16px;
+}
