--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -164,3 +164,9 @@ body{
 .el-date-editor .el-range__icon,.el-date-editor .el-range-separator,.el-date-editor .el-range__close-icon{
   line-height:16px;
 }
+.el-form-item__content{
+  line-height:0;
+}
+.croppa-container{
+  border: 1px solid #dcdcdc;
+}
