--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -170,3 +170,16 @@ body{
 .croppa-container{
   border: 1px solid #dcdcdc;
 }
+.el-submenu__title{
+  color: #333;
+}
+.el-table .el-table__header .colorLabel{
+  font-weight:bold;
+  color: #333;
+}
+.el-table .el-table__body .pad-left{
+  padding-left: 40px;
+}
+.colorRow{
+  color: red;
+}
