--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -250,3 +250,9 @@ body{
   cursor: none;
   margin: 0 5px;
 }
+.viedoDialog .el-dialog{
+  width:70%;
+}
+.uploaderStyle.avatar-uploader .el-upload{
+  border:none;
+}
